// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should handle click 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw goGrTz"
    data-testid="Card"
  >
    Test
    <div
      class="absolute -top-1 -right-1 flex items-center m-4 space-x-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Card should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw ikHNGi"
    data-testid="Card"
  >
    <div
      class="absolute -top-1 -right-1 flex items-center m-4 space-x-1"
    />
  </div>
</DocumentFragment>
`;
